# eve

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  TODOS.md  build.py
cmake/: CMakeOptions.cmake
docs/: BUILDING.md  SCRIPTING_SETUP.md  SHORTCUTS.md  scripting.md
editor/: CMakeLists.txt  README.md  editor.cpp  editor.h  pch.h
editor/panels/: asset_inspector.cpp  asset_inspector.h  console_panel.cpp  console_panel.h  content_browser.cpp  content_browser.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  panel.cpp  panel.h  project_settings.cpp  project_settings.h  stats_panel.cpp  stats_panel.h  toolbar_panel.cpp  toolbar_panel.h  viewport_panel.cpp  viewport_panel.h
editor/utils/: modify_info.h  platform_utils.cpp  platform_utils.h
editor/widgets/: dock_space.cpp  dock_space.h  menu_bar.cpp  menu_bar.h
engine/: CMakeLists.txt  README.md  pch.h
engine/asset/: asset.cpp  asset.h  asset_loader.cpp  asset_loader.h  asset_registry.cpp  asset_registry.h
engine/core/: application.cpp  application.h  assert.h  buffer.cpp  buffer.h  color.h  core_minimal.h  entrypoint.cpp  event_system.h  file_system.cpp  file_system.h  input.cpp  input.h  instrumentor.cpp  instrumentor.h  json_utils.cpp  json_utils.h  log.cpp  log.h  timer.cpp  timer.h  uid.cpp  uid.h  window.cpp  window.h
engine/data/: font_awesome.h  icons_font_aweome.h  roboto_regular.h
engine/data/fonts/: font_awesome.cpp  font_awesome.h  roboto_regular.cpp  roboto_regular.h
engine/debug/: assert.h  instrumentor.cpp  instrumentor.h  log.cpp  log.h
engine/imgui/: imgui_layer.cpp  imgui_layer.h
engine/physics/: physics_system.cpp  physics_system.h
engine/project/: project.cpp  project.h
engine/renderer/: camera.cpp  camera.h  font.cpp  font.h  frame_buffer.cpp  frame_buffer.h  index_buffer.cpp  index_buffer.h  post_processor.cpp  post_processor.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  shader_library.cpp  shader_library.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer.h
engine/renderer/primitives/: line.h  quad.h  text.cpp  text.h
engine/scene/: components.h  editor_camera.cpp  editor_camera.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_renderer.cpp  scene_renderer.h  transform.cpp  transform.h
engine/scripting/: script.cpp  script.h  script_engine.cpp  script_engine.h  script_glue.cpp  script_glue.h
runtime/: CMakeLists.txt  README.md  runtime.cpp
script_core/: README.md  application.cs  camera.cs  color.cs  debug.cs  entity.cs  exceptions.cs  input.cs  interop.cs  key_code.cs  mathf.cs  mouse_code.cs  scene_manager.cs  script_core.csproj  vector2.cs  vector3.cs  vector4.cs  window.cs
script_core/asset/: asset.cs  asset_registry.cs
script_core/components/: camera_component.cs  component.cs  script_component.cs  sprite_renderer.cs  sprite_renderer_component.cs  text_renderer.cs  text_renderer_component.cs  transform.cs  transform_component.cs
script_core/physics/: box_collider.cs  circle_collider.cs  rigidbody2d.cs
script_core/renderer/: post_process_volume.cs  texture.cs
scripts/: arg_parser.py  builder.py  bundler.py  cmake_builder.py  config.py  dotnet_builder.py  requirements.py  shader_compiler.py
shaders/: README.md
shaders/include/: camera_data.esh  camera_data.glsl  platform.esh  platform.glsl  platform_utils.glsl  post_process_block.glsl  post_process_common.esh  post_process_common.glsl
shaders/src/: line.frag  line.vert  screen.esv  screen.vert  sprite.esf  sprite.vert  text.frag  text.vert
shaders/src/post-processing/: blur.esf  blur.frag  chromatic-aberration.frag  gray-scale.esf  screen.frag  sharpen.esf  sharpen.frag  vignette.frag
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  editor.cpp  editor.h  pch.h
src/engine/: CMakeLists.txt  pch.h
src/engine/core/: application.cpp  application.h  assert.h  buffer.cpp  buffer.h  color.h  core_minimal.h  entrypoint.cpp  entrypoint.h  event_system.h  input.cpp  input.h  json_utils.cpp  key_code.h  log.h  memory.h  mouse_code.h  timer.cpp  timer.h  transform.cpp  transform.h  uid.cpp  uid.h  window.cpp  window.h
src/engine/renderer/: camera.cpp  camera.h  debug_renderer.cpp  debug_renderer.h  frame_buffer.cpp  frame_buffer.h  index_buffer.cpp  index_buffer.h  render_instance.cpp  render_instance.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/engine/renderer/primitives/: quad.cpp  quad.h
src/engine/scene/: components.h  editor_camera.cpp  editor_camera.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_manager.h  scene_renderer.cpp
